# ocaml_examples

./: README.md  first.ml
happy_numbers/: dune  happy_numbers  happy_numbers.ml  happy_numbers.obuild
happy_numbers/lib/: happy_numbers.ml
numbers/: _oasis  dune  first.ml  first.obuild  first.opam
numbers/lib/: numbers.ml
numbers/test/: dune  first_test.ml
