opam-version: "2.0"
version: "1.0"
maintainer: "name@email.com"
authors: ["MaciekTalaska"]
homepage: "https://github.com/MaciekTalaska/ocaml_examples"
bug-reports: "https://github.com/MaciekTalaska/ocaml_examples/issues"
dev-repo: "git+https://github.com/MaciekTalaska/ocaml_examples.git"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
